ヘッダー、フッター修正
ホバー時の表示調整/▽の表示の修正/画像の差し替え

--- a/responsive.css
+++ b/responsive.css
@@ -158,25 +158,6 @@
         padding:12px 0 15px 75px !important;
         text-align: left;
     }
-    .item01 > a:after,
-    .item04 > a:after,
-    .item05 > a:after {
-        font-family: "Font Awesome 5 Free";
-        content: '\f0dd';
-        position: relative;
-        display: inline-block;
-        float: right;
-        font-size: 1.5em;
-        font-weight: bold;
-        margin-top: -14px;
-        margin-right: 70px;
-    }
-    .item01-active > a:after,
-    .item04-active > a:after,
-    .item05-active > a:after {
-        margin-top: -10px;
-        content: '\f0d8';
-    }
     .item02,.item03,.item05 {
         border-bottom: 1px solid #F0F0F0;
     }
@@ -270,25 +251,6 @@
     .dropdown-link {
         padding:12px 0 15px 75px !important;
         text-align: left;
-    }
-    .item01 > a:after,
-    .item04 > a:after,
-    .item05 > a:after {
-        font-family: "Font Awesome 5 Free";
-        content: '\f0dd';
-        position: relative;
-        display: inline-block;
-        float: right;
-        font-size: 1.5em;
-        font-weight: bold;
-        margin-top: -14px;
-        margin-right: 70px;
-    }
-    .item01-active > a:after,
-    .item04-active > a:after,
-    .item05-active > a:after {
-        margin-top: -10px;
-        content: '\f0d8';
     }
     .item02,.item03,.item05 {
         border-bottom: 1px solid #F0F0F0;
@@ -384,25 +346,6 @@
         padding:12px 0 15px 75px !important;
         text-align: left;
     }
-    .item01 > a:after,
-    .item04 > a:after,
-    .item05 > a:after {
-        font-family: "Font Awesome 5 Free";
-        content: '\f0dd';
-        position: relative;
-        display: inline-block;
-        float: right;
-        font-size: 1.5em;
-        font-weight: bold;
-        margin-top: -14px;
-        margin-right: 70px;
-    }
-    .item01-active > a:after,
-    .item04-active > a:after,
-    .item05-active > a:after {
-        margin-top: -10px;
-        content: '\f0d8';
-    }
     .item02,.item03,.item05 {
         border-bottom: 1px solid #F0F0F0;
     }
@@ -454,6 +397,25 @@
     .item05 .dropdown-link {
         text-align: center;
     }
+    .item01-box:hover {
+        color: #58A4B0 !important;
+        background-color: #fff !important;
+        transition: .3s;
+    }
+    .item01-hover {
+        color: #58A4B0 !important;
+        background-color: #fff !important;
+        transition: .3s;
+    }
+    .item02-box:hover,
+    .item03-box:hover,
+    .item04-box:hover,
+    .item05-box:hover {
+        color: #58A4B0 !important;
+    }
+    .text-lightblue {
+        color: #58A4B0 !important;
+    }
 }
 
 @media screen and (min-width:1200px) {
@@ -471,9 +433,6 @@
     .item05 a {
         padding-left: 60px !important;
     }
-    .item01 .dropdown-hover:hover {
-        color: #fff;
-    }
     .item04 .dropdown-link a:hover,
     .item05 .dropdown-link a:hover {
         color: #58A4B0;
@@ -484,6 +443,25 @@
         visibility: visible;
         opacity: 1;
         transition: .3s;
+    }
+    .item01-box:hover {
+        color: #58A4B0 !important;
+        background-color: #fff !important;
+        transition: .3s;
+    }
+    .item01-hover {
+        color: #58A4B0 !important;
+        background-color: #fff !important;
+        transition: .3s;
+    }
+    .item02-box:hover,
+    .item03-box:hover,
+    .item04-box:hover,
+    .item05-box:hover {
+        color: #58A4B0 !important;
+    }
+    .text-lightblue {
+        color: #58A4B0 !important;
     }
 }
 
@@ -1327,6 +1305,17 @@
     .footer-box .item05 a {
         padding-left: 0 !important;
     }
+    .item01-box-f:hover {
+        color: #58A4B0 !important;
+        background-color: #fff !important;
+        transition: .3s;
+    }
+    .item02-box-f:hover,
+    .item03-box-f:hover,
+    .item04-box-f:hover,
+    .item05-box-f:hover {
+        color: #58A4B0 !important;
+    }
 }
 
 @media screen and (min-width:1200px) {
@@ -1343,6 +1332,17 @@
     }
     .footer-box .item05 a {
         padding-left: 0 !important;
+    }
+    .item01-box-f:hover {
+        color: #58A4B0 !important;
+        background-color: #fff !important;
+        transition: .3s;
+    }
+    .item02-box-f:hover,
+    .item03-box-f:hover,
+    .item04-box-f:hover,
+    .item05-box-f:hover {
+        color: #58A4B0 !important;
     }
 }
 
