--- a/style.css
+++ b/style.css
@@ -495,6 +495,8 @@ img {
 .item01 .dropdown-hover {
     color: #fff;
     background-color: #58A4B0;
+    border: 1px solid #58A4B0;
+    transition: .3s;
 }
 .dropdown-list {
     position: absolute;
@@ -532,7 +534,12 @@ img {
 .item04 .dropdown-link a,.item05 .dropdown-link a {
     color: #909090;
 }
-
+.tri-box {
+    width: 20px;
+    margin-top: 7px;
+    margin-right: 72px;
+    float: right;
+}
 /* ハンバーガーメニュー */
 .hide {
     display: none;
