--- a/style.css
+++ b/style.css
@@ -471,6 +471,7 @@ img {
     width: 100%;
     max-height: 50px;
     height: 50px;
+    transition: .3s;
 }
 .navbar-nav {
     flex-direction: inherit;
