--- a/responsive.css
+++ b/responsive.css
@@ -859,6 +859,33 @@
     .subsidy-box .mt-4 {
         margin-top: .5rem !important;
     }
+    .adop-card-imgbox {
+        text-align: center;
+        padding: 0 !important;
+    }
+    .adop-card-img {
+        margin: 0;
+    }
+    .balloon-right-btm {
+        margin: .8em 0 1.5em -30px;
+    }
+    .balloon-left {
+        margin: 1em 0;
+    }
+    .balloon-left:before {
+        display: none;
+    }
+    .balloon-left:after {
+        display: none;
+    }
+    .adop-card .sub-text {
+        text-align: center;
+        margin-top: 10px;
+        font-size: .9em;
+    }
+    .adop-card-toptext {
+        font-size: 18px;
+    }
 }
 
 @media screen and (min-width: 576px) and (max-width: 767.98px) {
@@ -1026,6 +1053,33 @@
     .subsidy-box .mt-4 {
         margin-top: .5rem !important;
     }
+    .adop-card-imgbox {
+        text-align: center;
+        padding: 0 !important;
+    }
+    .adop-card-img {
+        margin: 0;
+    }
+    .balloon-right-btm {
+        margin: .8em 0 1.5em -30px;
+    }
+    .balloon-left {
+        margin: 1em 0;
+    }
+    .balloon-left:before {
+        display: none;
+    }
+    .balloon-left:after {
+        display: none;
+    }
+    .adop-card .sub-text {
+        text-align: center;
+        margin-top: 10px;
+        font-size: .9em;
+    }
+    .adop-card-toptext {
+        font-size: 18px;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991.98px) {
@@ -1107,6 +1161,13 @@
     .subsidy-box p,.subsidy-box a {
         font-size: 16px;
         letter-spacing: 0.02em;
+    }
+    .adop-card-img {
+        width: 200px;
+        margin-top: 30px;
+    }
+    .balloon-right-btm {
+        margin: 2.7em 15px 1.5em 0;
     }
 }
 
