--- a/style.css
+++ b/style.css
@@ -1689,6 +1689,7 @@ div.wpcf7 input.wpcf7-submit:hover {
     position: relative;
     display: inline-block;
     width: 500px;
+    height: 200px;
     margin: 1em 0 1.5em 15px;
     padding: 20px;
     min-width: 120px;
@@ -1696,7 +1697,7 @@ div.wpcf7 input.wpcf7-submit:hover {
     color: #555;
     font-size: 16px;
     background: #FFF;
-    border: solid 3px #555;
+    border: solid 2px #555;
     border-radius: 10px;
     box-sizing: border-box;
 }
@@ -1730,9 +1731,9 @@ div.wpcf7 input.wpcf7-submit:hover {
     margin-top: 50px;
 }
 .adop-card-img {
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
+    width: auto;
+    height: 200px;
+    margin-top: 1em;
     margin-left: 50px;
 }
 .adop-card-toptext {
