--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
 /* -------------------------------------------------------------------------------- */
 /*	0. CSS Reset
 /* -------------------------------------------------------------------------------- */
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 
 html {
     overflow-x: hidden;
@@ -248,7 +249,7 @@ summary {
 body {
     background: #fff;
     color: #000;
-    font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+    font-family: "Noto Sans Japanese", 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
     ;
     font-size: 1em;
     font-weight: 400;
