--- a/style.css
+++ b/style.css
@@ -248,9 +248,8 @@ summary {
 
 body {
     background: #fff;
-    color: #000;
-    font-family: "Noto Sans Japanese", 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-    ;
+    color: #707070;
+    font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, メイリオ,"Hiragino Kaku Gothic ProN", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
     font-size: 1em;
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
@@ -264,12 +263,12 @@ body {
 
 a {
     text-decoration: none;
-    color: #000;
+    color: #707070;
 }
 
 a:hover {
     text-decoration: underline;
-    color: #000;
+    color: #707070;
 }
 
 .noline a:hover {
