--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ summary {
 body {
     background: #fff;
     color: #1d1d1f;
-    font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, メイリオ,"Hiragino Kaku Gothic ProN", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+    font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic,"Hiragino Kaku Gothic ProN", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
     font-size: 1em;
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
