--- a/style.css
+++ b/style.css
@@ -1760,6 +1760,34 @@ div.wpcf7 input.wpcf7-submit:hover {
     font-size: 15px;
     font-weight: bold;
 }
+.staff-box {
+    padding: 130px 0px;
+}
+.staff-title p {
+    display: inline-block;
+    font-size: 36px;
+    border-bottom: 2px solid #00762C;
+}
+.staff-card {
+    margin-top: 100px;
+}
+.staff-cardbox {
+    margin-left: 50px;
+}
+.staff-position {
+    display: table;
+    color: #fff;
+    font-size: 18px;
+    margin-top: 15px;
+    background-color: #00762C;
+}
+.staff-name .sub-text {
+    color: #00762C;
+    font-size: 12px;
+}
+.staff-name .name {
+    font-size: 24px;
+}
 /* -------------------------------------------------------------------------------- */
 /*	11.	Blog
 /* -------------------------------------------------------------------------------- */
