職人紹介修正

--- a/style.css
+++ b/style.css
@@ -2345,7 +2345,7 @@ div .fadein:nth-of-type(2) {
 }
 
 .bg-photo38 {
-    background-image: url(images/DSCF8559-Edit-2.jpg)
+    background-image: url(images/DSCF8559-Edit-2.png)
 }
 
 .bg-photo39 {
